# StrategicTech-2026

./: .dockerfile  .gitignore  CLAUDE.md  PLAN.md  README.md  commands.txt  setup_rpi5(1).sh
dualtech-ros-main/: README.md  install_rpi_ros2.md  install_rpi_ros2_deps.sh
dualtech-ros-main/.devcontainer/: Dockerfile  build.sh  compose.yaml  devcontainer.json  setup.sh
dualtech-ros-main/dualtech/dualtech/: detection_publisher.py
dualtech-ros-main/dualtech_msgs/: LICENSE
external_recourses/: Wykaz_elementow_Dual_tech_2026.xlsx
install/: local_setup.sh  setup.sh
install/ugv/share/ugv/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
model/devastator/: preprocessing.ipynb  yolo_from_labaled.ipynb
raspberry_src/: CLAUDE.md
raspberry_src/.claude/: settings.local.json
raspberry_src/dualtech/: setup.py
raspberry_src/uav_msgs/: CMakeLists.txt  package.xml
raspberry_src/uav_msgs/msg/: DetectionReport.msg  UavTelemetry.msg
raspberry_src/uav_raspberry/: README.md  package.xml  setup.cfg  setup.py
raspberry_src/uav_raspberry/config/: mission_params.yaml  params.yaml
raspberry_src/uav_raspberry/launch/: full_mission_launch.py  test_vision_launch.py  uav.launch.py
raspberry_src/uav_raspberry/tests/: test_math_utils.py  test_state_machine.py
raspberry_src/uav_raspberry/uav_raspberry/: logistic_map.py  math_utils.py  qr_lawnmower.py  run_mission.py  scout_mission.py  telemetry_node.py
raspberry_src/uav_raspberry/uav_raspberry/gui/: __init__.py  terminal_gui.py
raspberry_src/uav_raspberry/uav_raspberry/mission/: __init__.py  battery_monitor.py  camera_control.py  gps_utils.py  mavsdk_controller.py  phase1_scan.py  phase2_identify.py  ros_publisher.py
raspberry_src/uav_raspberry/uav_raspberry/tools/: __init__.py  test_vision.py
raspberry_src/ugv_raspberry/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
raspberry_src/ugv_raspberry/launch/: ugv.launch.py
raspberry_src/ugv_raspberry/ugv_raspberry/: camera_streamer.cpp  camera_streamer_focus.cpp  motor_controller.cpp
src/UAV_RASPBERRY/: package.xml  setup.cfg
src/UAV_RASPBERRY/UAV_RASPBERRY/: init_node.py
src/UAV_STATION/: setup.cfg  setup.py
src/UAV_STATION/UAV_STATION/: init_node.py
src/UGV_RASPBERRY/: package.xml  setup.cfg  setup.py
src/ros2/UAV_RASPBERRY/: setup.py
src/ros2/UAV_STATION/: package.xml
src/ros2/UGV_RASPBERRY/UGV_RASPBERRY/: camera_node.py  control_keys.py
src/ros2/UGV_STATION/: package.xml  setup.cfg  setup.py
src/ros2/dualtech_msgs/msg/: Detection.msg
src/ros2/robot_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros2/robot_control/launch/: robot.launch.py
src/ros2/robot_control/robot_control/: detector.py  take_photo.cpp
src/ugv/: package.xml  setup.py
src/ugv/ugv/: camera_node.py  control_keys.py  control_listener.py  ugv.py
station_src/dualtech/: package.xml  setup.cfg
station_src/dualtech/dualtech/: detection_subscriber.py
station_src/dualtech_msgs/: CMakeLists.txt  package.xml
station_src/ugv_station/: package.xml  setup.py
station_src/ugv_station/ugv_station/: control_listener.py
