<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_raspberry</name>
  <version>1.0.0</version>
  <description>UGV Raspberry Pi nodes – motor controller (libgpiod + HW PWM) and camera streamer (GStreamer/libcamera)</description>

  <maintainer email="strategic.tech.pl@gmail.com">StrategicTech</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
