<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>1.0.0</version>
  <description>Sterowanie robotem na RPi 5 – silniki (libgpiod + HW PWM) + kamera (GStreamer/libcamera)</description>

  <maintainer email="strategictech@test.com">strategictech</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dualtech_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- System deps: libgpiod-dev, libgstreamer1.0-dev, libgstreamer-plugins-base1.0-dev -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
